--- a/docroot/sites/all/themes/ilr_theme/scss/components/_subsite_header.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_subsite_header.scss
@@ -8,7 +8,6 @@
     background: white; // See site-specific bg colors below
     position: relative;
     padding-bottom: .5em;
-
     @include transition-duration(.3s);
 
     &.sticky {
@@ -16,6 +15,7 @@
       position: fixed;
       top: 0;
       overflow: visible;
+      @include box-shadow(0 10px 10px -10px rgba(black, .5));
 
       h2 {
         display: none;
